<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/bg"
        android:contentDescription="@null" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="2" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0px"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical" >

                <ua.naiksoftware.waronline.MyButton
                    style="@style/MenuButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/pass_and_play"
                    android:onClick="onClickPAP" />

                <ua.naiksoftware.waronline.MyButton
                    style="@style/MenuButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/play_online" />

                <ua.naiksoftware.waronline.MyButton
                    style="@style/MenuButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/settings"
                    android:onClick="onClickSettings" />

                <ua.naiksoftware.waronline.MyButton
                    style="@style/MenuButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/about" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</merge>